objects/UPC_Credit_Note__c.object
<CustomObject>
    <fields>
        <fullName>UPC_Account_Interface__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Interface</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UPC_Account_Interfaces__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.UPC_Customer_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UPC_Account_Interfaces__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Affected_Amount__c</fullName>
        <label>Affected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Affected_Invoice_Numbers__c</fullName>
        <label>Affected Invoice Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Method_Expression__c</fullName>
        <formula>IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;EN&apos;), &apos;This will be credited to you with your next invoice.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;FR&apos;), &apos;Ce montant sera crédité sur votre prochaine facture.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;IT&apos;), &apos;L’importo in questione verrà accreditato sulla prossima fattura.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;EN&apos;), &apos;This will be credited to you with a separate invoice.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;FR&apos;), &apos;Ce montant sera crédité sur une facture séparée.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;IT&apos;), &apos;L’importo in questione verrà accreditato su una fattura separata.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Position Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;EN&apos;), &apos;This will be credited to you to a separate item on your next invoice.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Position Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;FR&apos;), &apos;Ce montant sera crédité sur une position séparée sur votre prochaine facture.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Position Next Invoice&apos;) &amp;&amp; ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;IT&apos;), &apos;L’importo in questione verrà accreditato con una voce separata sulla prossima fattura.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Next Invoice&apos;), &apos;Der Betrag wird Ihnen mit der nächsten Rechnung gutgeschrieben.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Invoice&apos;), &apos;Der Betrag wird Ihnen mit einer separaten Rechnung gutgeschrieben.&apos;,
IF(ISPICKVAL( UPC_Credit_Method__c , &apos;Separate Position Next Invoice&apos;), &apos;Der Betrag wird Ihnen auf einer separaten Position auf Ihrer nächsten Rechnung gutgeschrieben.&apos;, &apos;&apos;))))))))))))</formula>
        <label>Credit Method Expression</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Method__c</fullName>
        <label>Credit Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Invoice</fullName>
                </value>
                <value>
                    <fullName>Separate Invoice</fullName>
                </value>
                <value>
                    <fullName>Separate Position Next Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Customer_Name__c</fullName>
        <formula>UPC_Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Customer_Number__c</fullName>
        <description>Sap ID from Service object</description>
        <formula>UPC_Account_Interface__r.UPC_ID__c</formula>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Desired_Invoice_Text__c</fullName>
        <label>Desired Invoice Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Commercial_Contact_Name__c</fullName>
        <formula>UPC_Main_Commercial_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Commercial Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Commercial_Contact_Salutation__c</fullName>
        <formula>IF(ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;FR&apos;),  UPC_Main_Commercial_Contact__r.UPC_French_Salutation__c, 
IF(ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;IT&apos;),  UPC_Main_Commercial_Contact__r.UPC_Italian_Salutation__c,
IF(ISPICKVAL( UPC_Main_Commercial_Contact__r.UPC_Preferred_Language__c , &apos;EN&apos;),  UPC_Main_Commercial_Contact__r.UPC_English_Salutation__c, UPC_Main_Commercial_Contact__r.UPC_German_Salutation__c)))</formula>
        <label>Main Commercial Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Main_Commercial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the lookup to the main commercial contact of the affected Account</description>
        <label>Main Commercial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_New_Invoice_Amount__c</fullName>
        <label>New Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Period_From__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Period_To__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Contract Change</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>SLA Violation</fullName>
                </value>
                <value>
                    <fullName>Goodwill</fullName>
                </value>
                <value>
                    <fullName>Platform Incident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Requested_By_Name__c</fullName>
        <formula>UPC_Requested_By__r.FirstName + &apos; &apos;  + UPC_Requested_By__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Responsible__c</fullName>
        <label>Responsible</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Sales_Name__c</fullName>
        <formula>UPC_Sales__r.FirstName + &apos; &apos; + UPC_Sales__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Service_SAP_Id__c</fullName>
        <label>Service SAP Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>csord__Service__c.UPC_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.UPC_Customer_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>Credit_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>